# Zou_lab_control_v1

./: .gitattributes  .gitignore  AGENTS.md  README.md  estimate_resources.bat  install_current_kernel.py  install_requirements.bat  pulse_gui.bat  pulse_gui.py  pyproject.toml  requirements.txt  start_tutorials_jupyter_lab.bat
Zou_lab_control/: __init__.py
Zou_lab_control/frontend/: README.md  __init__.py  _watcher.py  canvas.py  data_figure.py  devtools.py  jupyter.py  live.py  notes.py  pulse_gui.py  qt_fluent.py  selectors.py  session.py  style.py  ticks.py
Zou_lab_control/neutral_atom/: __init__.py  notes.py  sequencer_server.py  session.py
docs/: DOCUMENTATION_GUIDE.md  FPGA_PULSE_STREAMER_CAPACITY.md  FRONTEND_FLUENT_STYLE_GUIDE.md  MAINTAINER_NOTES.md  PROJECT_OVERVIEW.md
docs/2d_rearrangement_manual/: 2d_rearrangement_tutorial_zh.aux  (+3 more)
fpga/: README.md  __init__.py  build_and_program.bat  run_server.bat
fpga/board_config/: README.md  (+2 more)
generated_sequences/: single_shot_sequence.json  single_shot_sequence.manifest.json  single_shot_sequence.v  single_shot_sequence.xdc
pulses/: README.md  camera_exposure_scan_example.txt  camera_imaging_40ch.json  camera_imaging_address_switch.json  camera_imaging_address_switch_scan.npy  pulse_20260607_224335_scan.npy
tests/: README.md  conftest.py  test_frontend_smoke.py  test_neutral_atom_lightweight.py
tutorials/: frontend_tutorial.ipynb  neutral_atom_fpga_server.ipynb  neutral_atom_hardware_quickstart.ipynb  neutral_atom_tutorial.ipynb
zou_lab_control.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+161 files in other folders)
